--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WaveSimulator</string>
+    <string name="button">Button@String</string>
+    <string name="outflow_switch">Reflecting Boundaries</string>
 </resources>
