--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">WaveSimulator</string>
     <string name="button">Button@String</string>
+    <string name="resetbutton">Reset</string>
+    <string name="resetwavebutton">Reset Wave</string>
     <string name="outflow_switch">Reflecting Boundaries</string>
+    <string name="action_settings">Settings</string>
 </resources>
