Updated user- and developerdocumentation

--- a/UserDoc/UserDoc.tex
+++ b/UserDoc/UserDoc.tex
@@ -51,7 +51,7 @@
 
 \section{Introduction}
 
-This project was designed to allow for simple wave-obstacle-interaction-simulation to be ported onto mobile Android-Systems. It entails adding waves onto a domain of calm water to simulate the effects of tsunamis. Additionally, the user is able to add landmasses to the domain and imitate the behavior of waves interacting with various shapes. Reflecting boundary conditions are an optional feature, enclosing the domain within surrounding terrain. The application is available to be used on all current Android devices and can be tested on any desktop through the Android Studio development environment.
+This project was designed to allow for simple wave-obstacle-interaction-simulation to be ported onto mobile Android-Systems. It entails adding waves onto a domain of calm water to simulate the effects of tsunamis. Additionally, the user is able to add landmasses to the domain and imitate the behavior of waves interacting with various shapes. Reflecting boundary conditions are an optional feature, enclosing the domain within surrounding terrain. The application is available to be used on all Android devices with API level 22 or higher and can be tested on any desktop through the Android Studio development environment.
 
 
 \begin{figure}[H]
@@ -175,6 +175,7 @@ The user can choose to reset the entire domain, or just the waves. This is done 
 
 \pagebreak
 \section{Accessing the Application}
-The code for the Application can be found in our \href{https://gitlab.lrz.de/ga84niv/WaveSimulator.git}{git-repository} and has to be executed via \href{https://developer.android.com/studio/}{Android Studio}. It is sufficient to only open the 'app' folder of our project. All prerequisites needed for running the app on a desktop or an Android-device\footnote{To run simulations on external Android devices, \href{https://developer.android.com/studio/run/oem-usb}{installing OEM USB-drivers} is necessary} is detailed on the Andriod Studio website. To run the app on a real Android device, developer mode has to be enabled.
+Our app can be downloaded from the \href{https://play.google.com/store/apps/details?id=gregor.wavesimulator}{Google-Play-Store}.
+The code for the application can be found in our \href{https://gitlab.lrz.de/ga84niv/WaveSimulator.git}{git-repository} and has to be executed via \href{https://developer.android.com/studio/}{Android Studio}. It is sufficient to only open the 'app' folder of our project. All prerequisites needed for running the app on a desktop or an Android-device\footnote{To run simulations on external Android devices, \href{https://developer.android.com/studio/run/oem-usb}{installing OEM USB-drivers} is necessary} is detailed on the Andriod Studio website. To run the app on a real Android device, developer mode has to be enabled. 
 
 \end{document}
