--- a/latex/SWE__simple__scenarios_8hh.tex
+++ b/latex/SWE__simple__scenarios_8hh.tex
@@ -13,8 +13,8 @@ Include dependency graph for S\+W\+E\+\_\+simple\+\_\+scenarios.\+hh\+:\nopagebr
 \subsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
-class \hyperlink{classSWE__RadialDamBreakScenario}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}
-\begin{DoxyCompactList}\small\item\em scenario is a test environment for the apps later wave-\/positioninig and its influence on the surrounding sea \end{DoxyCompactList}\end{DoxyCompactItemize}
+class \hyperlink{classSWE__FlatScenario}{S\+W\+E\+\_\+\+Flat\+Scenario}
+\begin{DoxyCompactList}\small\item\em scenario is a test environment that simulates a flat water-\/surface \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
