--- a/latex/classSWE__Scenario.tex
+++ b/latex/classSWE__Scenario.tex
@@ -15,7 +15,7 @@ Inheritance diagram for S\+W\+E\+\_\+\+Scenario\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=238pt]{classSWE__Scenario__inherit__graph}
+\includegraphics[width=180pt]{classSWE__Scenario__inherit__graph}
 \end{center}
 \end{figure}
 \subsection*{Public Member Functions}
@@ -103,7 +103,7 @@ Definition at line 75 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_ae7ed72f584069e9885c33c4ca83f3ff5}{}\label{classSWE__Scenario_ae7ed72f584069e9885c33c4ca83f3ff5}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_a5e118a3d34aace3175745965d5d9c567}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_a639126b73114a940a4e1d3cfb1bd2050}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
@@ -118,7 +118,7 @@ Definition at line 65 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_ae7ed72f584069e9885c33c4ca83f3ff5}{}\label{classSWE__Scenario_ae7ed72f584069e9885c33c4ca83f3ff5}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_a5e118a3d34aace3175745965d5d9c567}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_a639126b73114a940a4e1d3cfb1bd2050}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
@@ -134,7 +134,7 @@ Definition at line 66 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_afe09a1ba63304800651f25873570a348}{}\label{classSWE__Scenario_afe09a1ba63304800651f25873570a348}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_ab54c88d18ff3a577a3e33f1659d97b50}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_a0e0bcfaa2ccacf0716df4e818e47ea75}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
@@ -150,7 +150,7 @@ Definition at line 61 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_afe09a1ba63304800651f25873570a348}{}\label{classSWE__Scenario_afe09a1ba63304800651f25873570a348}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_ab54c88d18ff3a577a3e33f1659d97b50}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_a0e0bcfaa2ccacf0716df4e818e47ea75}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
@@ -165,7 +165,7 @@ Definition at line 62 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_a1b01e953c2079b64f527c9bc5a0c86d7}{}\label{classSWE__Scenario_a1b01e953c2079b64f527c9bc5a0c86d7}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_ac5392df630c8164560df5cb902df385a}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_a046d055ee2e6f20a0509801f5fbe7d58}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
@@ -180,7 +180,7 @@ Definition at line 68 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_a1b01e953c2079b64f527c9bc5a0c86d7}{}\label{classSWE__Scenario_a1b01e953c2079b64f527c9bc5a0c86d7}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_ac5392df630c8164560df5cb902df385a}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_a046d055ee2e6f20a0509801f5fbe7d58}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
@@ -195,7 +195,7 @@ Definition at line 69 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_ab8fe7ce15d7758fb0c4e0e3887b34a5d}{}\label{classSWE__Scenario_ab8fe7ce15d7758fb0c4e0e3887b34a5d}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_a40a7ddfd7d85631eeb708232c9f7f20d}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_ac290c261f5a73b4a42defdc71a70ec0e}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
@@ -210,7 +210,7 @@ Definition at line 67 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_ab8fe7ce15d7758fb0c4e0e3887b34a5d}{}\label{classSWE__Scenario_ab8fe7ce15d7758fb0c4e0e3887b34a5d}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_a40a7ddfd7d85631eeb708232c9f7f20d}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_ac290c261f5a73b4a42defdc71a70ec0e}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
@@ -274,7 +274,7 @@ Definition at line 61 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_ade6f356d60b1402c034611266462b88b}{}\label{classSWE__Scenario_ade6f356d60b1402c034611266462b88b}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_a0fb0917dd1e47f9580bd94ba5816795c}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_a8391be8368aa74a4439977328f42f1db}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
@@ -290,7 +290,7 @@ Definition at line 58 of file S\+W\+E\+\_\+\+Scenario.\+hh.
 )\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [virtual]}}\hypertarget{classSWE__Scenario_ade6f356d60b1402c034611266462b88b}{}\label{classSWE__Scenario_ade6f356d60b1402c034611266462b88b}
 
 
-Reimplemented in \hyperlink{classSWE__RadialDamBreakScenario_a0fb0917dd1e47f9580bd94ba5816795c}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}.
+Reimplemented in \hyperlink{classSWE__FlatScenario_a8391be8368aa74a4439977328f42f1db}{S\+W\+E\+\_\+\+Flat\+Scenario}.
 
 
 
