--- a/latex/hierarchy.tex
+++ b/latex/hierarchy.tex
@@ -4,15 +4,6 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{Float1D}{\pageref{classFloat1D}}{}
 \item \contentsline{section}{Float2D}{\pageref{classFloat2D}}{}
 \item \contentsline{section}{Solver.\+Helper}{\pageref{classSolver_1_1Helper}}{}
-\item On\+Double\+Tap\+Listener\begin{DoxyCompactList}
-\item \contentsline{section}{wavesimulator.\+Wave\+View\+Touch\+Listener}{\pageref{classwavesimulator_1_1WaveViewTouchListener}}{}
-\end{DoxyCompactList}
-\item On\+Gesture\+Listener\begin{DoxyCompactList}
-\item \contentsline{section}{wavesimulator.\+Wave\+View\+Touch\+Listener}{\pageref{classwavesimulator_1_1WaveViewTouchListener}}{}
-\end{DoxyCompactList}
-\item On\+Touch\+Listener\begin{DoxyCompactList}
-\item \contentsline{section}{wavesimulator.\+Wave\+View\+Touch\+Listener}{\pageref{classwavesimulator_1_1WaveViewTouchListener}}{}
-\end{DoxyCompactList}
 \item \contentsline{section}{Solver.\+Simulation\+Runner}{\pageref{classSolver_1_1SimulationRunner}}{}
 \item \contentsline{section}{S\+W\+E\+\_\+\+Block}{\pageref{classSWE__Block}}{}
 \begin{DoxyCompactList}
@@ -21,14 +12,8 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{S\+W\+E\+\_\+\+Block1D}{\pageref{structSWE__Block1D}}{}
 \item \contentsline{section}{S\+W\+E\+\_\+\+Scenario}{\pageref{classSWE__Scenario}}{}
 \begin{DoxyCompactList}
-\item \contentsline{section}{S\+W\+E\+\_\+\+Radial\+Dam\+Break\+Scenario}{\pageref{classSWE__RadialDamBreakScenario}}{}
+\item \contentsline{section}{S\+W\+E\+\_\+\+Flat\+Scenario}{\pageref{classSWE__FlatScenario}}{}
 \end{DoxyCompactList}
-\item \contentsline{section}{Wave\+Propagation}{\pageref{classWavePropagation}}{}
 \item \contentsline{section}{solver\+:\+:Wave\+Propagation$<$ T $>$}{\pageref{classsolver_1_1WavePropagation}}{}
-\item App\+Compat\+Activity\begin{DoxyCompactList}
-\item \contentsline{section}{wavesimulator.\+Main\+Activity}{\pageref{classwavesimulator_1_1MainActivity}}{}
-\end{DoxyCompactList}
-\item View\begin{DoxyCompactList}
-\item \contentsline{section}{wavesimulator.\+Wave\+View}{\pageref{classwavesimulator_1_1WaveView}}{}
-\end{DoxyCompactList}
+\item \contentsline{section}{Wave\+Propagation}{\pageref{classWavePropagation}}{}
 \end{DoxyCompactList}
