--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -154,23 +154,19 @@
 \chapter{Namespace Documentation}
 \input{namespacesolver}
 \input{namespaceSolver}
-\input{namespacewavesimulator}
 \chapter{Class Documentation}
 \input{classSolver_1_1CPPSimulator}
 \input{classFloat1D}
 \input{classFloat2D}
 \input{classSolver_1_1Helper}
-\input{classwavesimulator_1_1MainActivity}
 \input{classSolver_1_1SimulationRunner}
 \input{classSWE__Block}
 \input{structSWE__Block1D}
-\input{classSWE__RadialDamBreakScenario}
+\input{classSWE__FlatScenario}
 \input{classSWE__Scenario}
 \input{classSWE__WavePropagationBlock}
-\input{classWavePropagation}
 \input{classsolver_1_1WavePropagation}
-\input{classwavesimulator_1_1WaveView}
-\input{classwavesimulator_1_1WaveViewTouchListener}
+\input{classWavePropagation}
 \chapter{File Documentation}
 \input{SWE__Block_8cpp}
 \input{SWE__Block_8hh}
@@ -186,9 +182,6 @@
 \input{CPPSimulator_8java}
 \input{Helper_8java}
 \input{SimulationRunner_8java}
-\input{MainActivity_8java}
-\input{WaveView_8java}
-\input{WaveViewTouchListener_8java}
 %--- End generated contents ---
 
 % Index
